# StudentManagement

./: .env.example  README.md  main.py  pyproject.toml
app/: __init__.py  database.py  main.py  model.py  repository.py  schemas.py  services.py
app/models/: __init__.py
app/repository/: __init__.py  database.py
app/routers/: __init__.py
app/schemas/: __init__.py
app/service/: __init__.py
docs/: class-diagram.puml  use-case-diagram.puml
